# budgie-translations

./: README.md  af.po  ar.po  be.po  be_Latn.po  bg_BG.po  bn.po  br.po  bs.po  budgie-desktop.pot  ca.po  cs.po  da.po  de.po  de_CH.po  el_GR.po  en_GB.po  en_US.po  eo.po  es.po  es_419.po  es_AR.po  es_CL.po  es_MX.po  es_PE.po  es_US.po  eu.po  fi.po  fr.po  fr_BE.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja_JP.po  ka.po  (+33 more)
po/: ar.po  bg_BG.po  bn.po  budgie-desktop.pot  ca.po  cs.po  da.po  de.po  el_GR.po  en_GB.po  en_US.po  eo.po  es.po  es_419.po  es_AR.po  es_CL.po  es_MX.po  es_PE.po  es_US.po  eu.po  fi.po  fr.po  fr_BE.po  ga.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja_JP.po  ko.po  lt.po  lv.po  ms_MY.po  ne.po  nl.po  nl_BE.po  nn.po  no.po  (+17 more)
