project(
    'budgie-translations',
    version: '10.5',
    license: 'GPL-2.0-only',
)

i18n = import('i18n')

# for i in *.po; do echo "    '$i'," | sed 's/\.po//'; done
langs = [
    'po/ar',
    'po/bg_BG',
    'po/bn',
    'po/ca',
    'po/cs',
    'po/da',
    'po/de',
    'po/el_GR',
    'po/en_GB',
    'po/en_US',
    'po/eo',
    'po/es_419',
    'po/es_AR',
    'po/es_CL',
    'po/es_MX',
    'po/es_PE',
    'po/es',
    'po/es_US',
    'po/eu',
    'po/fi',
    'po/fr_BE',
    'po/fr',
    'po/ga',
    'po/gl',
    'po/he',
    'po/hr',
    'po/hu',
    'po/id',
    'po/it',
    'po/ja_JP',
    'po/ko',
    'po/lt',
    'po/lv',
    'po/ms_MY',
    'po/ne',
    'po/nl_BE',
    'po/nl',
    'po/nn',
    'po/no',
    'po/pl',
    'po/pt_BR',
    'po/pt',
    'po/pt_PT',
    'po/ro',
    'po/ru',
    'po/sk',
    'po/sl',
    'po/sr_RS@latin',
    'po/sr_RS',
    'po/sv',
    'po/tr',
    'po/uk',
    'po/vi_VN',
    'po/zh_HK',
    'po/zh',
    'po/zh_TW',
]

# Stole this from gnome-twitch, ty TingPing
# https://github.com/vinszent/gnome-twitch/tree/master/po
i18n.gettext(meson.project_name(), languages : langs, args : [
    '--from-code=UTF-8',
    '--add-comments',
    '--package-name=' + meson.project_name(),
    '--package-version=' + meson.project_version(),
    '--keyword=_',
    '--keyword=N_',
    '--keyword=C_:1c,2',
    '--keyword=NC_:1c,2',
    '--keyword=g_dcgettext:2',
    '--keyword=g_dngettext:2,3',
    '--keyword=g_dpgettext2:2c,3',

    '--flag=N_:1:pass-c-format',
    '--flag=C_:2:pass-c-format',
    '--flag=NC_:2:pass-c-format',
    '--flag=g_dngettext:2:pass-c-format',
    '--flag=g_strdup_printf:1:c-format',
    '--flag=g_string_printf:2:c-format',
    '--flag=g_string_append_printf:2:c-format',
    '--flag=g_error_new:3:c-format',
    '--flag=g_set_error:4:c-format',
])
